# deep-learning-medical-image-classification-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-checks.yml
configs/: densenet121_768.yaml  efficientnet_b7_768.yaml  efficientnetv2_transformer_768.yaml  mobilenetv3_512.yaml
docs/: EXPERIMENTS.md  INTERVIEW_NOTES.md  MODEL_CARD.md  TECHNICAL_REPORT.md
results/: confusion_matrix_best.csv  dataset_audit_summary.csv  metrics_summary.csv  split_summary.csv
scripts/: train_ada_slurm.sbatch  train_local.sh
src/raravis_dl/: __init__.py  data.py  duplicate_audit.py  engine.py  evaluate.py  infer.py  interpretability.py  metrics.py  models.py  split_dataset.py  train.py  utils.py
tests/: test_metrics.py
